Se agregaron condicionales al documento

--- a/PruebasGitKraken.ipynb
+++ b/PruebasGitKraken.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,71 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = [\"uno\", \"dos\",\"tres\"]\n",
+    "lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preguntas = [\"¿Deseas continuar hacia la derecha?\", \"¿Deseas continuar hacia la izquierda?\", \"¿Nada?\"]\n",
+    "preguntas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "enunciado = \"Es en el siguiente juego, tienes tres opciones, ¿cuál eliges? \""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"uno, dos, tres\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opcion = input (prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preguntas[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opcion= input(prompt)\n",
+    "if opcion == \"uno\":\n",
+    "    print(\"Tu pregunta es %s\" %preguntas[0])\n",
+    "elif opcion== \"dos\":\n",
+    "    print (\"Tu pregunta es %s\" %preguntas[1])\n",
+    "else:\n",
+    "    print (\"Tu pregunta es %s\" %preguntas[2])"
+   ]
   }
  ],
  "metadata": {
