Ahora si el más bueno

--- a/PruebasGitKraken.ipynb
+++ b/PruebasGitKraken.ipynb
@@ -116,9 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uno, dos, tresuno\n",
+      "Tu pregunta es ¿Deseas continuar hacia la derecha?\n"
+     ]
+    }
+   ],
    "source": [
     "opcion= input(prompt)\n",
     "if opcion == \"uno\":\n",
@@ -128,13 +137,6 @@
     "else:\n",
     "    print (\"Tu pregunta es %s\" %preguntas[2])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
